@startuml
abstract SteeringBehaviour {
	+ Priority : int
	{abstract} + GetDirection() : Vector3
	{abstract} # Init() : void
	- Awake() : void
}
abstract BoidComponent {}
class BoidSeparation {}
class BoidCohesion {}
class BoidAlignment {}
class ChaseTarget {
	- _target : GameObject
}
class AvoidObstacles {}
class AvoidWalls {}
SteeringBehaviour <|.. BoidComponent
SteeringBehaviour <|-- AvoidObstacles
SteeringBehaviour <|-- AvoidWalls
SteeringBehaviour <|-- ChaseTarget
BoidComponent <|-- BoidSeparation
BoidComponent <|-- BoidCohesion
BoidComponent <|-- BoidAlignment
@enduml